--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
       const password = document.getElementById("password").value;
 
       try {
-        const res = await axios.post("  ", {
+        const res = await axios.post("http://localhost:5002/login", {
           username, password
         });
 
