--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login SITO</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/login.css">
 </head>
 <body class="bg-light d-flex justify-content-center align-items-center vh-100">
 
@@ -41,7 +42,8 @@
         });
 
         const data = res.data;
-        msg.innerHTML = `<div class="alert alert-success">Bienvenido ${data.role}!</div>`;
+        msg.innerHT
+        ML = `<div class="alert alert-success">Bienvenido ${data.role}!</div>`;
 
         // Guardar token en localStorage
         localStorage.setItem("token", data.token);
