--- a/login.html
+++ b/login.html
@@ -1,71 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login SITO</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/login.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SITO | Iniciar Sesión</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="css/login.css">
 </head>
-<body class="bg-light d-flex justify-content-center align-items-center vh-100">
+<body class="login-body">
+    <div class="login-container">
+        <div class="logo-login">
+            <img src="https://via.placeholder.com/150x60?text=SITO+UTL" alt="Logo SITO UTL">
+        </div>
+        <form id="loginForm">
+            <input type="text" id="username" placeholder="Usuario" required>
+            <input type="password" id="password" placeholder="Contraseña" required>
+            <button type="submit">Iniciar Sesión</button>
+        </form>
+        <div id="msg"></div>
+        <div class="links">
+            <a href="#">¿Problemas con tu cuenta?</a>
+            <a href="#">Regresar a UTL.</a>
+            <a href="#">Registro de Interesado TSU</a>
+            <a href="#">Registro de Interesado Licenciatura</a>
+        </div>
+        <div class="footer-links">
+            SITO | Sistema de Información Táctico Operativo © Copyright 2014
+            <p>Blvd. Universidad Tecnológica # 225 Col. San Carlos. CP: 37670, León, Gto. Mex. Tel: (477) 7 10 00 20. (Fax (477) 7 72 53 40 ©2008</p>
+        </div>
+    </div>
 
-  <div class="card shadow-lg p-4" style="width: 400px;">
-    <h3 class="text-center mb-4">Iniciar Sesión</h3>
-    <form id="loginForm">
-      <div class="mb-3">
-        <label for="username" class="form-label">Usuario</label>
-        <input type="text" class="form-control" id="username" required>
-      </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="password" required>
-      </div>
-      <button type="submit" class="btn btn-primary w-100">Entrar</button>
-    </form>
-    <div id="msg" class="mt-3 text-center"></div>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script>
-    const form = document.getElementById("loginForm");
-    const msg = document.getElementById("msg");
-
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      const username = document.getElementById("username").value;
-      const password = document.getElementById("password").value;
-
-      try {
-        const res = await axios.post("http://localhost:5002/login", {
-          username, password
-        });
-
-        const data = res.data;
-        msg.innerHT
-        ML = `<div class="alert alert-success">Bienvenido ${data.role}!</div>`;
-
-        // Guardar token en localStorage
-        localStorage.setItem("token", data.token);
-        localStorage.setItem("role", data.role);
-        localStorage.setItem("matricula", username); // <-- esto es clave para el dashboard
-
-        // Redirigir según rol
-        if (data.role === "alumno") {
-          window.location.href = "alumnos.html";
-        } else if (data.role === "profesor") {
-          window.location.href = "profesor.html";
-        } else if (data.role === "rh") {
-          window.location.href = "rh.html";
-        } else if (data.role === "servicios") {
-          window.location.href = "servicios.html";
-        }
-
-      } catch (err) {
-        msg.innerHTML = `<div class="alert alert-danger">Usuario o contraseña incorrectos</div>`;
-      }
-    });
-  </script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="js/login.js"></script>
 
 </body>
 </html>
