--- a/login.html
+++ b/login.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SITO | Iniciar Sesión</title>
+    <title>PITO | Iniciar Sesión</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/login.css">
 </head>
 <body class="login-body">
     <div class="login-container">
         <div class="logo-login">
-            <img src="https://via.placeholder.com/150x60?text=SITO+UTL" alt="Logo SITO UTL">
+            <img src="resources/utl.png" alt="Logo SITO UTL">
+                        PITO | Portal de Información Táctico Operativo 
+
         </div>
         <form id="loginForm">
             <input type="text" id="username" placeholder="Usuario" required>
@@ -19,13 +21,10 @@
         </form>
         <div id="msg"></div>
         <div class="links">
-            <a href="#">¿Problemas con tu cuenta?</a>
             <a href="#">Regresar a UTL.</a>
-            <a href="#">Registro de Interesado TSU</a>
-            <a href="#">Registro de Interesado Licenciatura</a>
         </div>
         <div class="footer-links">
-            SITO | Sistema de Información Táctico Operativo © Copyright 2014
+            PITO | Portal de Información Táctico Operativo © Copyright 2014
             <p>Blvd. Universidad Tecnológica # 225 Col. San Carlos. CP: 37670, León, Gto. Mex. Tel: (477) 7 10 00 20. (Fax (477) 7 72 53 40 ©2008</p>
         </div>
     </div>
