--- a/servicios.html
+++ b/servicios.html
@@ -5,117 +5,307 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Servicios Escolares</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    h2 { color: #333; }
-    form, .listado { margin-bottom: 20px; padding: 10px; border: 1px solid #ccc; border-radius: 6px;}
-    label { display:block; margin-top: 5px; }
-    input, select, button { margin-top: 5px; padding: 6px; width: 100%; }
-    table { width: 100%; border-collapse: collapse; margin-top:10px; }
-    th, td { border: 1px solid #ccc; padding: 6px; text-align: left; }
-    th { background-color: #f0f0f0; }
+    /* --- Estilos globales --- */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f5f7fa;
+    }
+    h2, h3 {
+      margin-top: 20px;
+      color: #213d62;
+    }
+
+    /* --- Barra de navegación / Tabs --- */
+    .navbar {
+      background-color: #213d62;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      color: #fff;
+    }
+    .navbar ul {
+      list-style: none;
+      display: flex;
+      margin: 0;
+      padding: 0;
+    }
+    .navbar ul li {
+      margin-right: 20px;
+    }
+    .navbar ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      cursor: pointer;
+      padding: 8px 12px;
+      border-radius: 5px;
+      transition: background 0.2s;
+    }
+    .navbar ul li a.active,
+    .navbar ul li a:hover {
+      background: #1a2f4a;
+    }
+
+    /* Contenedor principal */
+    .container {
+      padding: 20px;
+      max-width: 1100px;
+      margin: auto;
+    }
+
+    /* --- Formularios y tarjetas --- */
+    form, .listado {
+      background: #fff;
+      margin-bottom: 20px;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+    label {
+      display: block;
+      margin-top: 10px;
+      font-weight: bold;
+    }
+    input, select, button {
+      margin-top: 5px;
+      padding: 8px;
+      width: 100%;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+    button {
+      background-color: #213d62;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      margin-top: 15px;
+    }
+    button:hover {
+      background-color: #1a2f4a;
+    }
+
+    /* --- Tablas --- */
+    .table-container {
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      overflow: hidden;
+      margin-top: 20px;
+      width: 100%;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 0.95rem;
+    }
+    th, td {
+      padding: 10px;
+      text-align: center;
+      border-bottom: 1px solid #ddd;
+    }
+    th {
+      background: #f5f5f5;
+      font-weight: bold;
+    }
+    tr:last-child td {
+      border-bottom: none;
+    }
+
+    /* --- Tabs contenidos --- */
+    .tab-content {
+      display: none; /* Oculto por defecto */
+    }
+    .tab-content.active {
+      display: block; /* Visible solo el activo */
+    }
+    .navbar {
+  background-color: #213d62;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between; /* título izq, tabs der */
+  align-items: center;
+  color: #fff;
+}
+
+.navbar .logo {
+  font-weight: bold;
+  font-size: 18px;
+  color: #fff;
+}
+
+.navbar ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar ul li {
+  margin-left: 20px;
+}
+
+.navbar ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 8px 12px;
+  border-radius: 5px;
+  transition: background 0.2s;
+}
+
+.navbar ul li a.active,
+.navbar ul li a:hover {
+  background: #1a2f4a;
+}
+
   </style>
 </head>
 <body>
-  <h1>Servicios Escolares</h1>
 
-  <!-- Formulario Registrar Alumno -->
-  <form id="formAlumno">
-    <h2>Registrar Alumno</h2>
-    <label>Nombre</label>
-    <input type="text" name="nombre" required>
-    <label>Matrícula</label>
-    <input type="text" name="matricula" required>
-    <label>Carrera</label>
-    <input type="text" name="carrera" required>
-    <button type="submit">Registrar Alumno</button>
-  </form>
-
-  <!-- Listar Alumnos -->
-  <div class="listado">
-    <h2>Listado de Alumnos</h2>
-    <button onclick="listarAlumnos()">Actualizar lista</button>
-    <table>
-      <thead><tr><th>Nombre</th><th>Matrícula</th><th>Carrera</th></tr></thead>
-      <tbody id="alumnosTable"></tbody>
-    </table>
-  </div>
-<!-- Listado de Profesores -->
-<div class="listado">
-  <h2>Listado de Profesores</h2>
-  <button onclick="listarProfesores()">Actualizar lista</button>
-  <table>
-    <thead>
-      <tr><th>Nombre</th><th>Número de Empleado</th><th>Puesto</th></tr>
-    </thead>
-    <tbody id="profesoresTable"></tbody>
-  </table>
+<!-- Navbar con título a la izquierda y tabs a la derecha -->
+<div class="navbar">
+  <div class="logo">Servicios Escolares</div>
+  <ul>
+    <li><a href="#" class="tab-link active" data-tab="alumnosTab">Alumnos</a></li>
+    <li><a href="#" class="tab-link" data-tab="profesoresTab">Profesores</a></li>
+    <li><a href="#" class="tab-link" data-tab="gruposTab">Grupos</a></li>
+  </ul>
 </div>
-  <!-- Formulario Registrar Grupo -->
-  <form id="formGrupo">
-    <h2>Registrar Grupo</h2>
-    <label>Nombre del Grupo</label>
-    <input type="text" name="nombre_grupo" required>
-    <label>Carrera</label>
-    <input type="text" name="carrera" required>
-    <label>Profesor Responsable</label>
-    <input type="text" name="profesor_responsable" required>
-    <button type="submit">Registrar Grupo</button>
-  </form>
 
-  <!-- Listar Grupos -->
-  <div class="listado">
-    <h2>Listado de Grupos</h2>
-    <button onclick="listarGrupos()">Actualizar lista</button>
-    <table>
-      <thead><tr><th>Grupo</th><th>Carrera</th><th>Profesor</th><th>Alumnos</th></tr></thead>
-      <tbody id="gruposTable"></tbody>
-    </table>
+  <div class="container">
+
+    <!-- TAB ALUMNOS -->
+    <div id="alumnosTab" class="tab-content active">
+      <!-- Formulario Registrar Alumno -->
+      <form id="formAlumno">
+        <h2>Registrar Alumno</h2>
+        <label>Nombre</label>
+        <input type="text" name="nombre" required>
+        <label>Matrícula</label>
+        <input type="text" name="matricula" required>
+        <label>Carrera</label>
+        <input type="text" name="carrera" required>
+        <button type="submit">Registrar Alumno</button>
+      </form>
+
+      <!-- Listar Alumnos -->
+      <div class="listado">
+        <h2>Listado de Alumnos</h2>
+        <button onclick="listarAlumnos()">Actualizar lista</button>
+        <div class="table-container">
+          <table>
+            <thead><tr><th>Nombre</th><th>Matrícula</th><th>Carrera</th></tr></thead>
+            <tbody id="alumnosTable"></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <!-- TAB PROFESORES -->
+    <div id="profesoresTab" class="tab-content">
+      <div class="listado">
+        <h2>Listado de Profesores</h2>
+        <button onclick="listarProfesores()">Actualizar lista</button>
+        <div class="table-container">
+          <table>
+            <thead>
+              <tr><th>Nombre</th><th>Número de Empleado</th><th>Puesto</th></tr>
+            </thead>
+            <tbody id="profesoresTable"></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <!-- TAB GRUPOS -->
+    <div id="gruposTab" class="tab-content">
+      <!-- Formulario Registrar Grupo -->
+      <form id="formGrupo">
+        <h2>Registrar Grupo</h2>
+        <label>Nombre del Grupo</label>
+        <input type="text" name="nombre_grupo" required>
+        <label>Carrera</label>
+        <input type="text" name="carrera" required>
+        <label>Profesor Responsable</label>
+        <input type="text" name="profesor_responsable" required>
+        <button type="submit">Registrar Grupo</button>
+      </form>
+
+      <!-- Listar Grupos -->
+      <div class="listado">
+        <h2>Listado de Grupos</h2>
+        <button onclick="listarGrupos()">Actualizar lista</button>
+        <div class="table-container">
+          <table>
+            <thead><tr><th>Grupo</th><th>Carrera</th><th>Profesor</th><th>Alumnos</th></tr></thead>
+            <tbody id="gruposTable"></tbody>
+          </table>
+        </div>
+      </div>
+
+      <!-- Agregar alumno a grupo -->
+      <form id="formAgregarAlumno">
+        <h2>Agregar Alumno a Grupo</h2>
+        <label>Nombre del Grupo</label>
+        <input type="text" name="nombre_grupo" required>
+        <label>Matrícula del Alumno</label>
+        <input type="text" name="matricula" required>
+        <button type="submit">Agregar Alumno</button>
+      </form>
+    </div>
   </div>
-
-  <!-- Agregar alumno a grupo -->
-  <form id="formAgregarAlumno">
-    <h2>Agregar Alumno a Grupo</h2>
-    <label>Nombre del Grupo</label>
-    <input type="text" name="nombre_grupo" required>
-    <label>Matrícula del Alumno</label>
-    <input type="text" name="matricula" required>
-    <button type="submit">Agregar Alumno</button>
-  </form>
 
   <script>
+    /* --- Control Tabs --- */
+    document.querySelectorAll('.tab-link').forEach(link => {
+      link.addEventListener('click', e => {
+        e.preventDefault();
+        // desactivar todos
+        document.querySelectorAll('.tab-link').forEach(l => l.classList.remove('active'));
+        document.querySelectorAll('.tab-content').forEach(tab => tab.classList.remove('active'));
+
+        // activar este
+        link.classList.add('active');
+        document.getElementById(link.dataset.tab).classList.add('active');
+      });
+    });
+
+    /* --- Tu JS actual --- */
     const API_URL = "http://localhost:5003";
 
-     async function listarProfesores() {
-    try {
-      const res = await fetch("http://localhost:5005/profesoresGet"); // ajusta el puerto y endpoint de tu microservicio de RH
-      const profesores = await res.json();
-      const tbody = document.getElementById('profesoresTable');
-      tbody.innerHTML = '';
-      profesores.forEach(p => {
-        tbody.innerHTML += `
-          <tr>
-            <td>${p.nombreP}</td>
-            <td>${p.matriculaP}</td>
-          </tr>`;
-      });
-    } catch(err) {
-      alert("Error al cargar profesores: " + err.message);
+    async function listarProfesores() {
+      try {
+        const res = await fetch("http://localhost:5005/profesoresGet");
+        const profesores = await res.json();
+        const tbody = document.getElementById('profesoresTable');
+        tbody.innerHTML = '';
+        profesores.forEach(p => {
+          tbody.innerHTML += `
+            <tr>
+              <td>${p.nombreP}</td>
+              <td>${p.matriculaP}</td>
+              <td>${p.puesto || ''}</td>
+            </tr>`;
+        });
+      } catch(err) {
+        alert("Error al cargar profesores: " + err.message);
+      }
     }
-  }
+    listarProfesores();
 
-  // Cargar listado de profesores al inicio
-  listarProfesores();
-    // Registrar Alumno
     document.getElementById('formAlumno').addEventListener('submit', async (e) => {
       e.preventDefault();
       const data = Object.fromEntries(new FormData(e.target));
       const alumnoData = {
-      nombre: data.nombre,  // La matrícula como username
-      matricula: data.matricula,  // O default "12345"
-      carrera: data.carrera
-    };
-          console.log("Datos enviados a /alumnosR:", alumnoData);
-
+        nombre: data.nombre,
+        matricula: data.matricula,
+        carrera: data.carrera
+      };
       const res = await fetch(`${API_URL}/alumnosR`, {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
@@ -127,7 +317,6 @@
       e.target.reset();
     });
 
-    // Listar Alumnos
     async function listarAlumnos() {
       const res = await fetch(`${API_URL}/alumnosL`);
       const alumnos = await res.json();
@@ -142,8 +331,7 @@
           </tr>`;
       });
     }
-    
-    // Registrar Grupo
+
     document.getElementById('formGrupo').addEventListener('submit', async (e) => {
       e.preventDefault();
       const data = Object.fromEntries(new FormData(e.target));
@@ -157,32 +345,29 @@
       listarGrupos();
       e.target.reset();
     });
-// Listar Grupos
-async function listarGrupos() {
-    const res = await fetch(`${API_URL}/gruposL`);
-    const grupos = await res.json();
-    const tbody = document.getElementById('gruposTable');
-    tbody.innerHTML = '';
-    grupos.forEach(g => {
-        let profesorInfo = "";
-        // Verifica si la información del profesor es un objeto
-        if (g.profesor_responsable && typeof g.profesor_responsable === 'object') {
-            profesorInfo = `${g.profesor_responsable.nombre} (${g.profesor_responsable.matricula})`;
-        } else {
-            profesorInfo = "Profesor no asignado";
-        }
 
+    async function listarGrupos() {
+      const res = await fetch(`${API_URL}/gruposL`);
+      const grupos = await res.json();
+      const tbody = document.getElementById('gruposTable');
+      tbody.innerHTML = '';
+      grupos.forEach(g => {
+        let profesorInfo = "";
+        if (g.profesor_responsable && typeof g.profesor_responsable === 'object') {
+          profesorInfo = `${g.profesor_responsable.nombre} (${g.profesor_responsable.matricula})`;
+        } else {
+          profesorInfo = g.profesor_responsable || 'Profesor no asignado';
+        }
         tbody.innerHTML += `
             <tr>
-                <td>${g.nombre_grupo}</td>
-                <td>${g.carrera}</td>
-                <td>${profesorInfo}</td>
-                <td>${g.alumnos.join(', ')}</td>
+              <td>${g.nombre_grupo}</td>
+              <td>${g.carrera}</td>
+              <td>${profesorInfo}</td>
+              <td>${g.alumnos.join(', ')}</td>
             </tr>`;
-    });
-}
+      });
+    }
 
-    // Agregar Alumno a Grupo
     document.getElementById('formAgregarAlumno').addEventListener('submit', async (e) => {
       e.preventDefault();
       const data = Object.fromEntries(new FormData(e.target));
@@ -197,7 +382,6 @@ async function listarGrupos() {
       e.target.reset();
     });
 
-    // Cargar listas al inicio
     listarAlumnos();
     listarGrupos();
   </script>
