--- a/profesores.html
+++ b/profesores.html
@@ -30,7 +30,7 @@
                         onclick="showSection('registrar')" type="button" role="tab"> <span>📝</span> Registrar </button>
                     <button class="nav-tab" id="tab-eliminar" onclick="showSection('eliminar')" type="button"
                         role="tab"> <span>🗑️</span> Eliminar </button> <button class="nav-tab" id="tab-lista"
-                        onclick="loadProfesores()" type="button" role="tab"> <span>📋</span> Ver Lista </button> </nav>
+                        onclick="loadProfesores(),showSection('lista')" type="button" role="tab"> <span>📋</span> Ver Lista </button> </nav>
                 <!-- Sección Registrar -->
                 <section id="section-registrar" class="tab-content">
                     <div class="mb-4">
