mod front calificaciones

--- a/profesor.html
+++ b/profesor.html
@@ -9,6 +9,9 @@
 <body>
     <div class="container">
         <h1>Portal de Profesores</h1>
+        <div class="logout-container">
+            <button id="btnCerrarSesion">Cerrar Sesión</button>
+        </div>
 
         <!-- Botones de navegación interna -->
         <div class="nav-buttons">
