cambiar password profesor

--- a/profesor.html
+++ b/profesor.html
@@ -21,7 +21,7 @@
 
         <!-- Sección de calificaciones -->
         <div id="seccionCalificaciones" class="seccion">
-            <h2>Poner Calificaciones</h2>
+            <h2>Calificaciones</h2>
             <label for="grupoSelect">Grupo:</label>
             <select id="grupoSelect"></select>
 
