--- a/profesores.html
+++ b/profesores.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/globla.css">
     <link rel="stylesheet" href="css/profesores.css">
+    <link rel="shortcut icon" href="resources/favicon.ico">
 </head>
 
 <body class="bg-light">
