--- a/alumnos.html
+++ b/alumnos.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Alumno - Portal</title>
     <link rel="stylesheet" href="css/alumnos.css">
+    <link rel="shortcut icon" href="resources/favicon.ico">
 </head>
 <body>
 
