--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title>PITO | Iniciar Sesión</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/login.css">
+    <link rel="shortcut icon" href="resources/favicon.ico">
 </head>
 <body class="login-body">
     <div class="login-container">
