--- a/servicios.html
+++ b/servicios.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Servicios Escolares</title>
+  <link rel="shortcut icon" href="resources/favicon.ico">
   <style>
     /* --- Estilos globales --- */
     body {
